# EasyOrder

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Teste-Desy  Thiago.txt  arquivo-rozangela.txt  main.html  main.py  natan.txt  ola.html  pyproject.toml  pytest.ini  requirements-dev.txt  supervisord.conf
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements-docs.txt  usage.rst
docs/api/: index.rst
infra/: app.py  easyorder_stack.py
infra/cdk.out/: EasyOrderStack.template.json  manifest.json  tree.json
infra/infra/: __init__.py  infra_stack.py
infra/tests/unit/: __init__.py  test_infra_stack.py
src/: __init__.py  aula.py  main.py
src/db/: __init__.py  memory_db.py
src/models/: __init__.py  order.py  order_item.py
src/routes/: __init__.py  orders.py
tests/: __init__.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_orders.py
tools/: check_docstrings_length.py
