[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyorder"
version = "0.1.0"
description = "Teaching example FastAPI app for orders"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "EasyOrder Team" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2",
]

[tool.setuptools]
# Mantemos o caminho de import como 'src', igual aos testes (from src.main import app).
packages = ["src", "src.db", "src.models", "src.routes"]
package-dir = { "src" = "EasyOrder/src" }

[tool.black]
line-length = 80
target-version = ["py312"]
exclude = '/(\\.venv|venv|\\.git|\\.mypy_cache|\\.pytest_cache|build|dist)/'

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = [".venv", "venv", "build", "dist", ".git"]
